# worldcereal-model-training

./: .gitignore  PLAN.md  README.md  pyproject.toml
scripts/: build_consensus_features.py  download_worldcereal_finetune.py  extract_finetune_points.py  extract_local.py  finetune_presto.py  run_local_extractions.py  run_worldcereal.py  sample_polygons_by_tuman.py  score_chips_presto.py  split_samples_by_tile.py  validate_uzcosmos_worldcereal.py
src/wc_train/utils/: logging.py
