[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wc-train"
version = "0.1.0"
description = "WorldCereal model training: Presto fine-tuning + label-agreement filtering for crop classification."
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "click>=8.1",
    "numpy>=1.26",
    "pandas>=2.2",
    "geopandas>=0.14",
    "shapely>=2.0",
    "rasterio>=1.3",
    "torch>=2.2",
    "tqdm>=4.66",
    "requests>=2.31",
    "pymongo>=4.6",
]

[project.optional-dependencies]
openeo = [
    "openeo>=0.30",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]
